--- a/Scarb.toml
+++ b/Scarb.toml
@@ -9,6 +9,9 @@ starknet = ">= 2.6.0"
 [dev-dependencies]
 snforge_std = { git = "https://github.com/foundry-rs/starknet-foundry.git", tag = "v0.23.0" }
 
+[[target.starknet-contract]]
+
+
 [scripts]
 test = "snforge test"
 
